--- a/PresidentFront/.vscode/launch.json
+++ b/PresidentFront/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "edge",
+            "request": "launch",
+            "name": "Launch Edge",
+            "url": "http://localhost:4200/game",
+            "webRoot": "${workspaceFolder}"
+        },
         
         {
             "type": "node",
